chore: get the homepage to about 90% completion
chore: use clamp() for responsiveness on homepage

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App__container {
   width: 100%;
   position: relative;
-  padding: 0 25px;
+  padding: 0 20px;
 }
 
 .blur {
@@ -11,5 +11,11 @@
 @media screen and (min-width: 768px) {
   .App__container {
     padding: 0 65px;
+  }
+}
+
+@media screen and (min-width: 480px) {
+  .App__container {
+    padding: 0 40px;
   }
 }
