--- a/src/components/nav/Navigation.css
+++ b/src/components/nav/Navigation.css
@@ -30,6 +30,15 @@
   color: var(--slate);
 }
 
+.logo {
+  cursor: pointer;
+}
+
+.logo a {
+  text-decoration: none;
+  color: var(--very-light-green);
+}
+
 .fa-icon {
   cursor: pointer;
   font-size: 25px;
