--- a/src/containers/home/Home.css
+++ b/src/containers/home/Home.css
@@ -5,7 +5,7 @@
   /* font-weight: 100; */
   height: 100vh;
   padding: 30px 0px;
-  font-family: var(--ff-sans);
+  /* font-family: var(--ff-sans); */
   /* background-color: red; */
 }
 
@@ -16,32 +16,32 @@
   font-family: var(--ff-mono);
 }
 
-.Home__name,
-.Home__interest {
+.Home__name {
   margin-bottom: 15px;
-  font-size: 3.05rem;
+  font-size: 3.02rem;
   font-weight: 900;
   font-family: "Montserrat Alternates", sans-serif;
-}
-.Home__interest {
-  font-size: 3rem;
-  /* font-size: clamp(30px, 8vw, 80px); */
+  font-size: clamp(3rem, 5vw, 5rem);
 }
 
 .Home__interest {
-  font-size: 3rem;
+  /* font-size: 3rem; */
+  font-weight: 900;
+  font-family: "Montserrat Alternates", sans-serif;
   color: var(--slate);
-  /* font-size: clamp(25px, 8vw, 75px); */
+  font-size: clamp(3rem, 5vw, 5rem);
+  margin-bottom: 15px;
 }
 .Home__content {
   font-family: "Montserrat", sans-serif;
-  max-width: 400px;
-
+  max-width: 600px;
+  /* max-width: clamp(400px, 10vw, 700px); */
   font-size: 1.3rem;
   color: var(--slate);
   font-weight: bold;
   line-height: 1.7;
   margin-bottom: 15px;
+  font-size: clamp(1.35rem, 1.6vw, 1.8rem);
 
   /* font-size: 1.5rem; */
 }
