--- a/src/components/nav/Navigation.css
+++ b/src/components/nav/Navigation.css
@@ -1,6 +1,6 @@
 .Nav__container {
   position: sticky;
-  top: 0px;
+  top: 0;
   width: 100%;
   padding: 25px 0;
   display: flex;
@@ -25,8 +25,11 @@
   gap: 40px;
   cursor: pointer;
 }
-
-.Nav__link__container li:hover {
+.Nav__link__container li a {
+  text-decoration: none;
+  color: var(--very-light-green);
+}
+.Nav__link__container li a:hover {
   color: var(--slate);
 }
 
@@ -43,18 +46,6 @@
   cursor: pointer;
   font-size: 25px;
 }
-/* .fa-times {
-  animation: rotate-fa-times linear 1s;
-} */
-
-/* .fa-times:hover {
-  transform: rotate(180deg);
-} */
-
-/* .blur {
-  overflow: hidden;
-  filter: blur(1px);
-} */
 
 @media screen and (min-width: 768px) {
   .Nav__link__container ul {
@@ -73,13 +64,3 @@
     display: flex;
   }
 } */
-
-@keyframes rotate-fa-times {
-  0% {
-    transform: rotate(90deg);
-    opacity: 0.1;
-  }
-  50% {
-    transform: rotate(180deg);
-  }
-}
