--- a/src/containers/about/About.css
+++ b/src/containers/about/About.css
@@ -1,13 +1,14 @@
 .About__container {
+  display: flex;
+  flex-direction: column;
   width: 100%;
   /* max-width: 600px; */
   color: var(--lighter-slate);
   /* font-weight: 100; */
-  height: 100vh;
+  min-height: 100vh;
   padding: 30px 0px;
-  background-color: slate;
+  /* background-color: slate; */
   /* font-family: var(--ff-sans); */
-  /* background-color: red; */
 }
 
 .About__heading {
@@ -31,22 +32,66 @@
   font-family: "Montserrat", sans-serif;
   max-width: 600px;
   /* max-width: clamp(400px, 10vw, 700px); */
-  font-size: 1.3rem;
   color: var(--slate);
-  font-weight: bold;
+  font-weight: bolder;
   line-height: 1.9;
   margin-bottom: 15px;
-  font-size: clamp(1.35rem, 1.6vw, 1.8rem);
+  font-size: clamp(1.25rem, 1.3vw, 1.45rem);
 }
 
-.About__wrapper {
+.About__container p a {
+  text-decoration: none;
+  color: var(--very-light-green);
 }
+
+.About__container p a:hover {
+  text-decoration: underline;
+}
+
+.About__image {
+  width: 100%;
+  max-width: 280px;
+  height: auto;
+  border-radius: 50%;
+  /* filter: drop-shadow(2px 2px 2px var(--light-green)); */
+}
+
+.About__image-container {
+  text-align: center;
+}
+.About__technologies {
+  padding: 0 10px;
+  font-family: "Montserrat", sans-serif;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 15px;
+  color: var(--slate);
+  font-weight: bolder;
+  font-size: clamp(1.25rem, 1.3vw, 1.45rem);
+  line-height: 1.9;
+}
+
+.About__technologies ul {
+  list-style: none;
+}
+
+.arrow-icon {
+  color: var(--very-light-green);
+  margin-right: 10px;
+}
+/* .About__technologies li::before {
+  content: url("https://cdn1.iconfinder.com/data/icons/shapes-line/50/8_faces-1024.png");
+  color: blue;
+  height: 10px;
+  width: 10px;
+} */
 
 @media screen and (min-width: 768px) {
   .About__wrapper {
     display: flex;
-    flex: 1;
+    /* flex: 1; */
     flex-direction: row-reverse;
+    gap: 15px;
     /* grid-template-columns: 3fr 2fr; */
   }
 
@@ -55,5 +100,9 @@
   }
   .About__image-container {
     width: 40%;
+  }
+
+  .About__image {
+    border-radius: 10%;
   }
 }
