--- a/src/containers/footer/Footer.css
+++ b/src/containers/footer/Footer.css
@@ -1,7 +1,7 @@
 .Footer__container {
   width: 100%;
+  /* height: 100vh; */
   padding: 40px;
-  background-color: black;
   color: var(--slate);
   display: flex;
   flex-direction: column;
