--- a/src/containers/home/Home.css
+++ b/src/containers/home/Home.css
@@ -3,7 +3,8 @@
   /* max-width: 600px; */
   color: var(--lighter-slate);
   /* font-weight: 100; */
-  height: 100vh;
+  /* min-height: 100%; */
+  min-height: 100vh;
   padding: 30px 0px;
   /* font-family: var(--ff-sans); */
   /* background-color: red; */
@@ -41,7 +42,7 @@
   font-weight: bold;
   line-height: 1.7;
   margin-bottom: 15px;
-  font-size: clamp(1.35rem, 1.6vw, 1.8rem);
+  font-size: var(--fs-para);
 
   /* font-size: 1.5rem; */
 }
