--- a/src/containers/project/Project.css
+++ b/src/containers/project/Project.css
@@ -5,64 +5,5 @@
   color: var(--lighter-slate);
   min-height: 100vh;
   padding-bottom: 30px;
+  counter-reset: project-counter;
 }
-
-/* .Project__image-wrapper {
-  width: 100%;
-}
-
-.Project__image {
-  width: 100%;
-  height: auto;
-  border-radius: 5px;
-}
-
-.Project__item-container {
-  display: flex;
-  flex-direction: column;
-}
-
-.Project__about {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  color: var(--slate);
-  font-family: var(--ff-mono);
-  gap: 15px;
-}
-
-.Project__link {
-  display: flex;
-  align-items: center;
-  gap: 25px;
-}
-.Project__link span {
-  font-size: 20px;
-}
-.Project__link span:hover {
-  color: var(--very-light-green);
-}
-.Project__link a {
-  text-decoration: none;
-  color: var(--slate);
-}
-
-.Project__description p {
-  font-family: var(--ff-sans);
-  max-width: 500px;
-  color: var(--slate);
-  font-weight: bolder;
-  line-height: 1.7;
-  margin-bottom: 15px;
-  font-size: var(--fs-para);
-}
-
-@media screen and (width >= 768px) {
-  .Project__item {
-    display: flex;
-  }
-
-  .Project__about {
-    padding: 20px;
-  }
-} */
