--- a/src/components/subheading/SubHeading.css
+++ b/src/components/subheading/SubHeading.css
@@ -1,18 +1,20 @@
 .SubHeading__container {
   width: 100%;
+  padding-left: 4px;
+  padding-top: 4px;
 }
 .sub-heading {
   font-family: var(--ff-mono);
   margin-bottom: 10px;
   font-size: var(--fs-heading2);
+  opacity: 0.8;
 }
 
 .sub-heading::before {
-  content: "01";
+  content: "0" counter(project-counter);
   color: var(--very-light-green);
-  font-size: 30px;
+  font-size: 20px;
   margin-right: 30px;
-  /* position: relative; */
-  /* top: 25px; */
-  /* z-index: -1; */
+  opacity: 0.5;
+  counter-increment: project-counter;
 }
