feat: add Contact section
chore: redesign the project description container to overlay on the image

--- a/src/components/body/Body.css
+++ b/src/components/body/Body.css
@@ -1,6 +1,9 @@
 .Body__container {
   width: 100%;
   /* padding: 0 25px; */
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
 }
 
 .Body__heading {
