--- a/src/components/project-item/ProjectItem.css
+++ b/src/components/project-item/ProjectItem.css
@@ -1,9 +1,11 @@
 .Project__item-container {
+  position: relative;
   display: flex;
   flex-direction: column;
-  margin-bottom: 30px;
+  /* margin-bottom: 30px; */
   border-radius: 20px;
-  box-shadow: 1px 1px 2px var(--dark-green), -1px -1px 2px var(--dark-green);
+  /* padding-bottom: -100px; */
+  /* box-shadow: 1px 1px 2px var(--dark-green), -1px -1px 2px var(--dark-green); */
   /* background-color: red; */
 }
 .Project__item {
@@ -31,13 +33,16 @@
   gap: 10px;
   background-color: var(--darker-green);
   padding-left: 4px;
+  position: relative;
+  bottom: 0px;
+  top: -60px;
 }
 
 .Project__link,
 .Project__tools {
   display: flex;
   align-items: center;
-  gap: 20px;
+  gap: 15px;
 }
 .Project__link span {
   font-size: var(--fs-link);
@@ -75,5 +80,10 @@
 
   .Project__about {
     padding: 20px;
+    top: 0px;
+  }
+
+  .Project__item-container {
+    margin-bottom: 30px;
   }
 }
