--- a/src/components/button/Button.css
+++ b/src/components/button/Button.css
@@ -26,3 +26,13 @@
 .p-20 {
   padding: 20px;
 }
+.invert {
+  border: 1px solid var(--very-light-green);
+  background-color: inherit;
+  color: var(--very-light-green);
+}
+
+.invert:hover {
+  background-color: var(--very-light-green);
+  color: var(--very-dark-green);
+}
