feat: add animation and CV
add animation to the rest of the pages and also attach CV to Download CV button

--- a/src/components/project-item/ProjectItem.css
+++ b/src/components/project-item/ProjectItem.css
@@ -22,6 +22,10 @@
   height: auto;
   border-radius: 5px;
   opacity: 0.5;
+  transition: opacity 1.5s ease-in-out;
+}
+.Project__image:hover {
+  opacity: 0.8;
 }
 
 .Project__about {
