--- a/src/containers/contact/Contact.css
+++ b/src/containers/contact/Contact.css
@@ -23,6 +23,7 @@
 }
 .Contact__wrapper h2 {
   font-family: var(--ff-mono);
+  font-size: var(--fs-heading2);
 }
 .Contact__wrapper p {
   font-family: var(--ff-sans);
