--- a/src/containers/contact/Contact.css
+++ b/src/containers/contact/Contact.css
@@ -5,7 +5,7 @@
   /* max-width: 600px; */
   color: var(--lighter-slate);
   /* font-weight: 100; */
-  min-height: 100vh;
+  /* min-height: 100vh; */
   padding-bottom: 50px;
   /* background-color: slate; */
   font-family: var(--ff-sans);
