--- a/src/containers/home/Home.css
+++ b/src/containers/home/Home.css
@@ -2,7 +2,7 @@
   width: 100%;
   color: var(--lighter-slate);
   min-height: 100vh;
-  padding: 30px 0px;
+  padding-top: 50px;
   /* display: flex;
   flex-direction: column;
   justify-content: baseline; */
@@ -10,17 +10,16 @@
 
 .Home__salutation {
   color: var(--very-light-green);
-  font-size: 1.7rem;
+  font-size: 2.5rem;
   margin-bottom: 15px;
   font-family: var(--ff-mono);
 }
 
 .Home__name {
   margin-bottom: 15px;
-  font-size: 3.02rem;
   font-weight: 900;
   font-family: "Montserrat Alternates", sans-serif;
-  font-size: clamp(3rem, 5vw, 5rem);
+  font-size: clamp(3.65rem, 5vw, 6rem);
 }
 
 .Home__interest {
@@ -28,16 +27,15 @@
   font-weight: 900;
   font-family: "Montserrat Alternates", sans-serif;
   color: var(--slate);
-  font-size: clamp(3rem, 5vw, 5rem);
+  font-size: clamp(3.4rem, 5vw, 5.5rem);
   margin-bottom: 15px;
 }
 .Home__content {
   font-family: var(--ff-sans);
   max-width: 600px;
-  font-size: 1.3rem;
   color: var(--slate);
   font-weight: bold;
-  line-height: 1.7;
+  line-height: 1.9;
   margin-bottom: 20px;
   font-size: var(--fs-para);
 }
