refactor: make texts on action buttons responsive

--- a/src/components/nav/Navigation.css
+++ b/src/components/nav/Navigation.css
@@ -47,10 +47,10 @@
   font-size: 25px;
 }
 
-/* .Nav__action_container {
+.Nav__action_container {
   display: flex;
   gap: 10px;
-} */
+}
 .Nav__action_cv {
   display: none;
 }
