--- a/src/components/button/Button.css
+++ b/src/components/button/Button.css
@@ -1,6 +1,5 @@
 .buttonStyle {
   background-color: var(--very-light-green);
-  outline: none;
   border: none;
   padding: 12px 10px;
   color: var(--very-dark-green);
@@ -8,7 +7,6 @@
   /* font-weight: 400; */
   border-radius: 5px;
   transition: all ease-in 0.2s;
-  letter-spacing: 1.1px;
   font-family: var(--ff-mono);
   font-weight: bolder;
   font-size: 1.7rem;
@@ -36,4 +34,8 @@
 .invert:hover {
   background-color: var(--very-light-green);
   color: var(--very-dark-green);
+}
+
+.fs-responsive {
+  font-size: var(--fs-para);
 }
