--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,9 @@
   padding: 0 20px;
 }
 
-.hide-overflow {
+/* .hide-overflow {
   overflow: hidden;
-}
+} */
 
 @media screen and (min-width: 768px) {
   .App__container {
