--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,21 @@ pre {
    font-family: var(--font-mono);
 }
 
+/* Hide scrollbar for Chrome, Safari and Edge */
+.hide-scrollbar::-webkit-scrollbar {
+   display: none;
+}
+
+/* Hide scrollbar for Firefox */
+.hide-scrollbar {
+   scrollbar-width: none;
+}
+
+/* Hide scrollbar for IE, Edge (old) */
+.hide-scrollbar {
+   -ms-overflow-style: none;
+}
+
 @theme inline {
    --color-background: var(--background);
    --color-foreground: var(--foreground);
@@ -35,6 +50,8 @@ pre {
    --color-muted: var(--muted);
    --color-muted-foreground: var(--muted-foreground);
    --color-primary-dark: var(--primary-dark);
+   --color-card: var(--card);
+   --color-card-foreground: var(--card-foreground);
 }
 
 /* ========================
@@ -51,6 +68,8 @@ pre {
    --muted: oklch(0.269 0 0);
    --muted-foreground: oklch(0.708 0 0);
    --primary-dark: #063798;
+   --card: oklch(1 0 0);
+   --card-foreground: oklch(0.145 0 0);
 }
 
 /* ========================
@@ -59,11 +78,15 @@ pre {
 .dark {
    --primary: #135bec;
    --primary-foregound: #ffffff;
-   --background: #101622;
+   --background: #0b0f17;
    --foreground: #ffffff;
    --secondary: oklch(0.269 0 0);
    --secondary-foreground: oklch(0.985 0 0);
    --muted: oklch(0.97 0 0);
    --muted-foreground: oklch(0.556 0 0);
    --primary-dark: #135bec;
+   --card: #182131;
+   /* --card: #101622; */
+   /* --card: oklch(0.205 0 0); */
+   --card-foreground: oklch(0.985 0 0);
 }
